Change: switched to java17